--- a/python/PwChangeEmail.ipynb
+++ b/python/PwChangeEmail.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "12cb8333",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "a30bdf9a",
    "metadata": {},
    "outputs": [],
@@ -30,17 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "75f711c1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 계정 정보를 저장하기 위해 최초로 한 번만 동작시키도록 한다.\n",
     "# 이후로는 또 동작하면(계정 정보가 다시 리셋)\n",
+    "# 밑에 uerID와 userpw부분은 실제 계정 이름과 비번으로 등록 해주세요. 한번만 하면 되니 그다음부터 이 단락은 안돌려도 됩니다. 여기는 account에 정보\n",
+    "# 넣는 창입니다.\n",
     "import pickle\n",
     "\n",
     "email_user_info = dict({\n",
-    "    \"smtp_user_id\": \"wsk0307@gmail.com\",\n",
+    "    \"smtp_user_id\": \"wsk0307@naver.com\",\n",
     "    \"smtp_user_pw\": \"\"\n",
     "})\n",
     "\n",
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "f95b314c",
    "metadata": {},
    "outputs": [],
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "e7440c94",
    "metadata": {},
    "outputs": [],
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "075a3529",
    "metadata": {},
    "outputs": [
@@ -108,7 +110,7 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "<ipython-input-6-dc20eb1a86ee>:8: DeprecationWarning: 'encoding' is ignored and deprecated. It will be removed in Python 3.9\n",
+      "<ipython-input-23-ca77754b5732>:8: DeprecationWarning: 'encoding' is ignored and deprecated. It will be removed in Python 3.9\n",
       "  params = json.loads(request.get_data(), encoding='utf-8')\n"
      ]
     },
@@ -116,14 +118,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "daniel wsk0307@gmail.com\n"
+      "wonkim wsk0307@naver.com\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [28/Oct/2021 17:41:16] \"\u001b[37mPOST /findPwByEmail HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/Nov/2021 20:08:30] \"\u001b[37mPOST /findPwByEmail HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -149,9 +151,10 @@
     "    email = params['email']\n",
     "    \n",
     "    print(name, email)\n",
-    "\n",
+    "#네이버든 구글이든 서버 포트는 동일하게 587입니다. 그리고 그전에 네이버 SMTP 사용함으로 바꿔주시고 gmail도 보안 낮은 앱 사용으로 바꿔주세요\n",
+    "#구글 보안 링크 https://myaccount.google.com/lesssecureapps?pli=1&rapt=AEjHL4OKOBb13PWoNRnv2K9j0JNt7z9hJP2c2ZMV8Bnzt7pB1E9pqoh554QydK6ldj5wKnTqWSfYahmtn7bHRGuc_LeeuRbJhA\n",
     "    smtp_info = dict({\n",
-    "        'smtp_server': 'smtp.gmail.com',\n",
+    "        'smtp_server': 'smtp.naver.com', \n",
     "        'smtp_port': 587\n",
     "    })\n",
     "\n",
@@ -159,7 +162,7 @@
     "    now_time = now.strftime('%Y-%m-%d %H:%M')\n",
     "    \n",
     "    title = '유러너 - ' + name + '님 비밀번호 재설정 링크입니다.'\n",
-    "    content =  now_time + '에 비밀번호 재설정을 요청하였습니다.\\n아래 링크에서 비밀번호 재설정을 완료해 주세요.\\nhttp://http://localhost:8080/changepw?name=' + name \n",
+    "    content =  now_time + '에 비밀번호 재설정을 요청하였습니다.\\n아래 링크에서 비밀번호 재설정을 완료해 주세요.\\http://localhost:8080/changepw?name=' + name \n",
     "    sender = email_user_info['smtp_user_id']\n",
     "    receiver = email\n",
     "    \n",
